// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manga source list Should render correctly with items and user 1`] = `
<nav
  aria-label="manga sources"
  className="MuiList-root makeStyles-root-1 test-class-1 test-class-2 MuiList-padding"
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root makeStyles-mainItem-2 MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemText-root makeStyles-listOpener-4"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Manga sources
      </span>
    </div>
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
      />
    </svg>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-entered"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          className="MuiList-root"
        >
          <li
            className="MuiListItem-root makeStyles-nested-3 MuiListItem-gutters"
            disabled={false}
          >
            <p
              className="MuiTypography-root MuiTypography-body1"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangaplus.shueisha.co.jp/titles/100010"
                onBlur={[Function]}
                onFocus={[Function]}
                rel="noopener noreferrer"
                target="_blank"
              >
                MANGA Plus
              </a>
            </p>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              name="Follow MANGA Plus"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Unfollow
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </li>
          <li
            className="MuiListItem-root makeStyles-nested-3 MuiListItem-gutters"
            disabled={false}
          >
            <p
              className="MuiTypography-root MuiTypography-body1"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangadex.org/title/20882"
                onBlur={[Function]}
                onFocus={[Function]}
                rel="noopener noreferrer"
                target="_blank"
              >
                MangaDex
              </a>
            </p>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              name="Follow MangaDex"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Follow
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </li>
          <li
            className="MuiListItem-root makeStyles-nested-3 MuiListItem-gutters"
            disabled={false}
          >
            <p
              className="MuiTypography-root MuiTypography-body1"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://test.com/manga/test_series_1"
                onBlur={[Function]}
                onFocus={[Function]}
                rel="noopener noreferrer"
                target="_blank"
              >
                TestService
              </a>
            </p>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              name="Follow TestService"
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Follow
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </li>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Manga source list Should render correctly with items without user 1`] = `
<nav
  aria-label="manga sources"
  className="MuiList-root makeStyles-root-1 test-class-1 test-class-2 MuiList-padding"
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root makeStyles-mainItem-2 MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemText-root makeStyles-listOpener-4"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Manga sources
      </span>
    </div>
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
      />
    </svg>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-entered"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          className="MuiList-root"
        >
          <li
            className="MuiListItem-root makeStyles-nested-3 MuiListItem-gutters"
            disabled={false}
          >
            <p
              className="MuiTypography-root MuiTypography-body1"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangaplus.shueisha.co.jp/titles/100010"
                onBlur={[Function]}
                onFocus={[Function]}
                rel="noopener noreferrer"
                target="_blank"
              >
                MANGA Plus
              </a>
            </p>
          </li>
          <li
            className="MuiListItem-root makeStyles-nested-3 MuiListItem-gutters"
            disabled={false}
          >
            <p
              className="MuiTypography-root MuiTypography-body1"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangadex.org/title/20882"
                onBlur={[Function]}
                onFocus={[Function]}
                rel="noopener noreferrer"
                target="_blank"
              >
                MangaDex
              </a>
            </p>
          </li>
          <li
            className="MuiListItem-root makeStyles-nested-3 MuiListItem-gutters"
            disabled={false}
          >
            <p
              className="MuiTypography-root MuiTypography-body1"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://test.com/manga/test_series_1"
                onBlur={[Function]}
                onFocus={[Function]}
                rel="noopener noreferrer"
                target="_blank"
              >
                TestService
              </a>
            </p>
          </li>
        </div>
      </div>
    </div>
  </div>
</nav>
`;
